--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 </head>
 <body>
     <div class="container body-content">
-        <a href="https://hashflare.io/r/207EAFF"><img src="https://cdn.hashflare.eu/banners/en/FB1-3klicks-Ko-ENG.jpg?v=2" alt="HashFlare"></a>
+        <br />
+        <br />
+        <a href="https://hashflare.io/r/207EAFF"><img src="https://cdn.hashflare.eu/banners/en/FB1-3klicks-Ko-ENG.jpg?v=2" alt="HashFlare" width=400 ></a>
         <br />
         <br />
         <h2>Btc-TL Hesaplama</h2>
